# strict-typing

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: trybuild.rs
tests/cases/: fail_disallow_extra_type.rs  fail_disallow_extra_type.stderr  fail_enum_primitive.rs  fail_enum_primitive.stderr  fail_function_param.rs  fail_function_param.stderr  fail_function_return.rs  fail_function_return.stderr  fail_impl_param.rs  fail_impl_param.stderr  fail_missing_strictness_docs.rs  fail_missing_strictness_docs.stderr  fail_struct_primitive.rs  fail_struct_primitive.stderr  fail_trait_return.rs  fail_trait_return.stderr  pass_allow_with_docs.rs  pass_disallow_with_docs.rs  pass_enum.rs  pass_function.rs  pass_impl_block.rs  pass_newtype_struct.rs  pass_trait.rs
